--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cons": "^0.0.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.3"
   },
