--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,8 @@
     "cons": "^0.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.3"
+    "mongoose": "^5.7.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
